# matrix-commander-rs

./: .gitignore  Cargo.toml  README.md  help.help.txt  help.manual.txt  help.txt  help.usage.txt
.github/: dependabot.yml
.github/workflows/: publish-to-cratesio-dryrun.yml  publish-to-cratesio.yml  release-by-label-linux.yml  release-by-label.yml  release-manual.yml  release.yml  rust-by-gh.yml  test.yml
help/: help.txt  manual.txt  usage.txt
scripts/: clean-local.sh  create-help-help.sh  create-help-manual.sh  create-help-usage.sh  create-help.sh  matrix-commander-rs-tui  update-1-help.py  update-1-version.sh  update-2-help-manual.py  update-2-help.py  workflow-outline.sh  workflow.sh
src/: emoji_verify.rs  listen.rs  main.rs  mclient.rs
tests/: test-devices.sh  test-get-display-name.sh  test-get-profile.sh  test-rooms.sh  test-send.sh  test-version.sh
