# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "matrix-commander"
version = "0.3.1"
edition = "2021"
description = "simple but convenient CLI-based Matrix client app for sending and receiving"
documentation = "https://docs.rs/matrix-commander"
readme = "README.md"
homepage = "https://github.com/8go/matrix-commander-rs"
repository = "https://github.com/8go/matrix-commander-rs/"
license = "GPL-3.0-or-later"
# crates.io only allows 5 keywords
keywords = ["Matrix", "cli", "command-line-tool", "tool", "messaging"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["todo.txt", ".*"]
publish = true


[dependencies]
clap = { version = "4.5", features = ["derive", "color", "wrap_help", "unicode"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
serde_json = "1.0"
tracing-subscriber = "0.3"
tracing = "0.1"
directories = "5.0"
matrix-sdk = { version = "0.7", features = ["markdown", "anyhow"] }
# matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk , features = ["markdown", "anyhow"] }
tokio = { version = "1.37", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
mime = "0.3"
mime_guess = "2.0"
update-informer = "1.1"
json = "0.12"
reqwest = "0.11"
regex = "1.10"
colored = "2.1"
rpassword = "7.3"

[dev-dependencies]

# this is to distinguish it from "matrix-commander" which is the Python program
# For people that have both Python and Rus installed:
# "matrix-commander" will remain the Python program
# "matrix-commander-rs" will be the Rust program
[[bin]]
name = "matrix-commander-rs"
path = "src/main.rs"

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
[badges]
# The author wants to share it with the community but is not intending to meet anyone's particular use case.
maintenance = { status = "experimental" }


[profile.release]
strip = "symbols"
lto = true

[profile.release-tiny]
inherits = "release"
opt-level = "s"
