# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "matrix-commander"
version = "1.0.0"
edition = "2021"
description = "simple but convenient CLI-based Matrix client app for sending and receiving"
documentation = "https://docs.rs/matrix-commander"
readme = "README.md"
homepage = "https://github.com/8go/matrix-commander-rs"
repository = "https://github.com/8go/matrix-commander-rs/"
license = "GPL-3.0-or-later"
# crates.io only allows 5 keywords
keywords = ["Matrix", "cli", "command-line-tool", "tool", "messaging"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["todo.txt", ".*"]
publish = true


[dependencies]
clap = { version = "4.5", features = [
    "derive",
    "color",
    "wrap_help",
    "unicode",
] }
colored = "3.0"
directories = "6.0"
futures-util = "0.3"
json = "0.12"
matrix-sdk = { version = "0.16", features = ["markdown", "anyhow", "bundled-sqlite"] }
mime = "0.3"
mime_guess = "2.0"
#
# create openssl dependency for cross compilation.
# this removes dependencies on architecture specific openssl files.
# see: https://stackoverflow.com/questions/54775076/how-to-cross-compile-a-rust-project-with-openssl
# see: https://github.com/cross-rs/cross/issues/229
# see: https://stackoverflow.com/questions/68871193/pkg-config-error-during-rust-cross-compilation
openssl = { version = '0.10', features = ["vendored"] }
regex = "1.11"
reqwest = "0.12"
rpassword = "7.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.45", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
update-informer = "1.2"
url = { version = "2.5", features = ["serde"] }


[dev-dependencies]
# "matrix-commander-rs" will be the Rust program
# to perform tests on async functions
tokio-test = "0.4"

# this is to distinguish it from "matrix-commander" which is the Python program
# For people that have both Python and Rust installed:
# "matrix-commander" will remain the Python program
[[bin]]
name = "matrix-commander-rs"
path = "src/main.rs"

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
[badges]
# The author wants to share it with the community but is not intending to meet anyone's particular use case.
maintenance = { status = "experimental" }


[profile.release]
strip = "symbols"
lto = true

[profile.release-tiny]
inherits = "release"
opt-level = "s"
